# LMS-DRF_project

./: .coverage  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: celery.py  settings.py  urls.py
htmlcov/: index.html
lms/: admin.py  models.py  paginations.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_subscription.py  0004_course_price_lesson_price.py
nginx/: Dockerfile  nginx.conf
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: createsuperuser.py  fill_payments.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_user_managers.py  0004_payment_link_payment_session_id.py  0005_alter_payment_payment_method.py
